--- a/ctserver/.env
+++ b/ctserver/.env
@@ -1,2 +1,3 @@
-PORT=6000
+PORT=3001
 MONGO_URI=mongodb+srv://newUser1:yqzQnukJLiS1OXSv@cluster0.9zynr.mongodb.net/ctfourteen?retryWrites=true&w=majority
+JWT_SECRET=aksdjf2093@@#ksadjfk
