--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
       "mongoose": "^6.2.8",
       "nodemon": "^2.0.15",
       "validator": "^13.7.0"
-    }
+    },
+    "engines": {
+      "node": "18.0.0"
+      }
   }
   
