--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "validator": "^13.7.0"
     },
     "engines": {
-      "node": "18.0.0"
+      "node": "16.0.0",
+      "npm": "6.0.0"
       }
   }
   
