--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-      "start": "node ctserver/app.js",
-      "dev": "nodemon ctserver/app.js",
+      "start": "node app.js",
+      "dev": "nodemon app.js",
       "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install ctui"
     },
     "keywords": [],
@@ -24,8 +24,8 @@
       "validator": "^13.7.0"
     },
     "engines": {
-      "node": "16.0.0",
-      "npm": "6.0.0"
+      "node": "17.0.0",
+      "npm": "7.10.0"
       }
   }
   
