--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
       "start": "node app.js",
       "dev": "nodemon app.js",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install ctui"
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && cd ctui && npm install && npm run build"
     },
     "keywords": [],
     "author": "",
