--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
       "start": "node app.js",
       "dev": "nodemon app.js",
-      "heroku-postbuild": "cd ctui && npm install && npm run build"
+      "heroku-postbuild": "npm install --prefix ctui"
     },
     "keywords": [],
     "author": "",
