--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js",
-      "heroku-postbuild": "npm install --prefix ctui"
+        "start": "node app.js",
+        "dev": "nodemon app.js",
+        "heroku-postbuild": "npm install --prefix ctui"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "axios": "^0.26.1",
-      "bcrypt": "^5.0.1",
-      "cookie-parser": "^1.4.6",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.3",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.2.8",
-      "nodemon": "^2.0.15",
-      "validator": "^13.7.0"
+        "axios": "^0.26.1",
+        "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.2.8",
+        "nodemon": "^2.0.15",
+        "swagger-ui-express": "^4.5.0",
+        "validator": "^13.7.0"
     },
     "engines": {
-      "node": "17.0.0",
-      "npm": "7.10.0"
-      }
-  }
-  
+        "node": "17.0.0",
+        "npm": "7.10.0"
+    }
+}
